--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/app"
-        android:label="En retard pour tes rattrapages ?"
+        android:label="Les bons plans Angevins ?"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
