Aprem max martin 11/05/2021

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ui.InscriptionActivity" />
         <activity android:name=".ui.ConnexionActivity" />
         <activity android:name=".ui.SensorActivity" />
+        <activity android:name=".ui.ListClientActivity" />
         <activity android:name=".ui.MapActivity" />
         <activity android:name=".ui.HistoryActivity" />
         <activity
