--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
 
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0-alpha01'
+
 
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
