--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -20,7 +22,7 @@
         <activity android:name=".ui.fonctions.RecyclerActivity" />
         <activity android:name=".ui.utilisateur.InscriptionActivity" />
         <activity android:name=".ui.utilisateur.ConnexionActivity" />
-        <activity android:name=".ui.app.menuActivity" />
+        <activity android:name=".ui.app.PhotoActivity" />
         <activity android:name=".ui.fonctions.SensorActivity" />
         <activity android:name=".ui.fragment.client.ListClientActivity" />
         <activity android:name=".ui.fonctions.MapActivity" />
