--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
     <application
         android:allowBackup="true"
         android:name="com.example.androideseo.ui.app.MyApp"
-        android:icon="@drawable/app"
-        android:label="Les bons plans Angevins ?"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/ic_launcher_foreground"
+        android:label="Developpeur Junior"
+        android:roundIcon="@mipmap/ic_launcher_foreground"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidESEO">
