--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,21 @@
+
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'org.jetbrains.dokka-android'
+    id 'kotlin-kapt'
+
 }
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+    dokka {
+        outputFormat = 'html'
+        outputDirectory = "$buildDir/javadoc"
+    }
 
 
     buildFeatures {
