--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext {
+        dokkaVersion = '0.9.17'
+    }
     repositories {
         google()
         jcenter()
@@ -9,6 +12,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokkaVersion"
 
 
         // NOTE: Do not place your application dependencies here; they belong
